# VaultIQ

./: .env.example  .gitignore  CONTRIBUTING.md  Plan.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  turbo.json  ui_showcase.md  vaultiq_innovations.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy-frontend.yml  deploy.yml
apps/web-app/: next.config.js  package-lock.json
backend/: Dockerfile  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.controller.ts  app.module.ts  main.ts
frontend/: middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: AIAssistant.tsx  AddAssetModal.tsx  AssetGraph.tsx  BlockchainBadge.tsx  CheckoutModal.tsx  DigitalTwin.tsx  FloatingAssistant.tsx  LandingHero3D.tsx  ManageMaintenanceModal.tsx  PasswordStrengthMeter.tsx  PremiumDatePicker.tsx  PremiumSelect.tsx  QRScanner.tsx  RoleGuard.tsx  Shell.tsx  ToastSystem.tsx
frontend/context/: AuthContext.tsx  VaultContext.tsx
frontend/lib/: api.ts  crypto.ts  generator.ts  mockStore.ts  passwordStrength.ts
frontend/public/: 404.html
frontend/styles/: globals.css
services/ai-orchestrator/: pyproject.toml
services/ai-orchestrator/src/: config.py  main.py
services/ai-orchestrator/src/routers/: ai.py  health.py
services/helpdesk-service/: package-lock.json  package.json
(+98 files in other folders)
